--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ p {
 
 .name, .mail, .password, .subscribe {
 	font-size: .7em;
+	color: #fff;
 	text-align: center;
 	margin: .3em 0;
 	background-color: transparent;
@@ -65,5 +66,6 @@ p {
 
 .subscribe {
 	background-color: #FFF;
+	color: #000;
 	width: 322px;
 }
